made header on recipe page display title of recipe and moved save recipe button to header. added padding to body on landingPage.css to make sure header elements do not overlap with page content

--- a/public/styles/landingPage.css
+++ b/public/styles/landingPage.css
@@ -3,7 +3,9 @@ body {
     margin: 0;
     padding: 0;
     background-color: #83aa7083;
-    padding-bottom: 100px; 
+    padding-top: 60px;
+    padding-bottom: 60px; /* Match the footer height */
+    min-height: calc(100vh - 100px); /* 100vh - header & footer heights */
 
 }
 
@@ -16,12 +18,14 @@ body {
     height: 60px;
     color: white;
     text-align: center;
-    padding: 10px 20px; /* Adjust padding as needed */
+    padding: 10px 20px;
+    /* Adjust padding as needed */
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    z-index: 1000; /* Ensure header is on top */
+    z-index: 1000;
+    /* Ensure header is on top */
 }
 
 footer {
@@ -36,24 +40,37 @@ footer {
     background-image: repeating-linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)),
         linear-gradient(to bottom, rgb(93, 141, 121), rgba(86, 182, 86, 0.527));
     padding: 10px;
-    z-index: 1000; /* Ensure footer is on top */
+    z-index: 1000;
+    /* Ensure footer is on top */
 }
 
 footer ion-icon {
     font-size: 30px;
 }
 
-a { 
+a {
     color: white;
 }
 
-.footer a ion-icon { 
-    color: white;  transition: color 0.3s; 
+.footer a ion-icon {
+    color: white;
+    transition: color 0.3s;
 }
 
-.footer a:hover ion-icon { 
-    color: rgb(255, 251, 0); 
+.footer a:hover ion-icon {
+    color: rgb(255, 251, 0);
 }
 
+/* Basic styling for the difficulty rating */
+.difficulty-rating {
+    display: flex;
+    /* Arrange icons horizontally */
+}
 
-  
+.difficulty-rating img {
+    width: 24px;
+    /* Adjust the size as needed */
+    height: 24px;
+    margin-right: 5px;
+    /* Add some space between icons */
+}
